<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.feature.main.MainActivity">

    <ImageView
        android:id="@+id/ivPinky"
        android:layout_width="355dp"
        android:layout_height="383dp"
        android:src="@drawable/svg_main"
        android:contentDescription="@string/content_description"
        app:layout_constraintBottom_toTopOf="@+id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07999998" />

    <TextView
        android:id="@+id/tvTitle"
        style="@style/TextCustom"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/soft_pink"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivPinky" />

    <TextView
        android:id="@+id/tvDescription"
        style="@style/TextCustom"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/first_page_quote"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />


    <Button
        android:id="@+id/btn_register"
        style="@style/RoundedButton"
        android:layout_marginStart="16dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="18dp"
        android:backgroundTint="@color/soft_pink"
        android:text="@string/register"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription"
        app:layout_constraintVertical_bias="0.925" />

    <Button
        android:id="@+id/btn_login"
        style="@style/RoundedButton"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/open_sans"
        android:backgroundTint="@color/soft_pink"
        android:text="@string/login"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>